<resources>
    <string name="app_name">YouXiao</string>
    <string name="welcome_experience_now">Experience Now</string>
    <string name="login_remember_password">Remember UserName And Password</string>
    <string name="login_forget_password">Forget Password？</string>
    <string name="login_sms_login">Verification Code SignIn</string>
    <string name="login_login">SignIn</string>
    <string name="login_more">More</string>
    <string name="login_et_user_hint">Enter Phone Number</string>
    <string name="login_et_pw_hint">Enter Password</string>
    <string name="login_select_school">Select School</string>
</resources>
