<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fcf5f7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/login_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="登录有校"
                    android:textSize="20sp"
                    android:textColor="#333333" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="10dp"
                    android:background="#999999"
                    android:layout_below="@+id/login_language"/>
            </RelativeLayout>


        </LinearLayout>

        <com.runtoinfo.youxiao.common_ui.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:src="@drawable/login_default_logo"
            app:civ_border_overlay="true"
            android:layout_marginTop="15dp"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_weight="7"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                tools:ignore="NestedWeights" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/background_button">


                    <EditText
                        android:id="@+id/login_mobile_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/login_et_user_hint"
                        android:inputType="number"
                        android:textColor="#333333"
                        android:textColorHint="#cccccc"
                        tools:ignore="LabelFor,RtlHardcoded" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="17dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/background_button">

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_toStartOf="@+id/login_get_verification"
                        android:background="@android:color/transparent"
                        android:hint="@string/login_et_pw_hint"
                        android:inputType="numberPassword"
                        android:textColor="#333333"
                        android:textColorHint="#cccccc"
                        tools:ignore="LabelFor,RtlHardcoded" />

                    <TextView
                        android:id="@+id/login_get_verification"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:text="获取验证码"
                        android:textColor="#fff"
                        android:textSize="15sp"
                        android:padding="5dp"
                        android:gravity="center"
                        android:background="@drawable/background_verification_button"
                        tools:ignore="ContentDescription"
                        android:enabled="false"
                        android:visibility="gone"/>

                    <ImageView
                        android:id="@+id/login_img_pw_vis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/login_password_off"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"/>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:layout_marginTop="17dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/login_bt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/background_login_button"
                        android:text="@string/login_login"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:enabled="false"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/login_check_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_forget_password"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:textColor="#999999" />

                    <TextView
                        android:id="@+id/login_verification_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_sms_login"
                        android:textColor="#999999"
                        tools:ignore="RelativeOverlap,RtlHardcoded" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/password_login"
                        android:textColor="#999999"
                        android:text="密码登录"
                        android:visibility="gone"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#fff"/>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </LinearLayout>

    </LinearLayout>
</layout>